--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.jvm -t quarkus/getting-started-jvm .
+# docker build -f src/main/docker/Dockerfile.jvm -t pzalejko/my-planner .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/getting-started-jvm
+# docker run -i --rm -p 8080:8080 pzalejko/my-planner
 #
 ###
 FROM fabric8/java-alpine-openjdk8-jre
