updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -23,7 +23,7 @@ jobs:
 
       - script: |
                        docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-                       docker login -u $(dockerId) -p $(dockerPassword)
+                       docker login -u $(dockerId) -p $env:pswd
                        docker push $(dockerId)/$(imageName)
         displayName: 'build docker image'
         env:
