--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -21,10 +21,26 @@ jobs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
 
-      - script: |
-                       docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-                       docker login -u $(dockerId) -p $env:pswd
-                       docker push $(dockerId)/$(imageName)
-        displayName: 'build docker image'
-        env:
-          pswd: $(dockerPassword)
+      - task: Docker@0
+        displayName: 'Build an image'
+        inputs:
+          imageName: '$(dockerId)/$(imageName)'
+          containerregistrytype: 'Container Registry'
+          dockerRegistryConnection: myDockerHub
+          dockerFile: src/main/docker/Dockerfile.native
+
+      - task: Docker@0
+        displayName: 'Push an image'
+        inputs:
+          containerregistrytype: 'Container Registry'
+          dockerRegistryConnection: myDockerHub
+          action: 'Push an image'
+          imageName: '$(dockerId)/$(imageName)'
+
+#      - script: |
+#                       docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+#                       docker login -u $(dockerId) -p $(pswd)
+#                       docker push $(dockerId)/$(imageName)
+#        displayName: 'build docker image'
+#        env:
+#          pswd: $(dockerPassword)
