updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -21,13 +21,17 @@ jobs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
 
-      - task: Docker@0
-        displayName: 'Build an image'
-        inputs:
-          imageName: '$(dockerId)/$(imageName)'
-          containerregistrytype: 'Container Registry'
-          dockerRegistryConnection: myDockerHub
-          dockerFile: src/main/docker/Dockerfile.native
+      - script: |
+                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+        displayName: 'build docker image'
+
+#      - task: Docker@0
+#        displayName: 'Build an image'
+#        inputs:
+#          imageName: '$(dockerId)/$(imageName)'
+#          containerregistrytype: 'Container Registry'
+#          dockerRegistryConnection: myDockerHub
+#          dockerFile: src/main/docker/Dockerfile.native
 
       - task: Docker@0
         displayName: 'Push an image'
