updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -12,7 +12,7 @@ jobs:
 
     variables:
       dockerId: pzalejko
-      imageName: my-runner
+      imageName: my-planner
 
     steps:
       - task: Maven@3
@@ -21,17 +21,18 @@ jobs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
 
-      - script: |
-                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-        displayName: 'build docker image'
+#      - script: |
+#                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+#        displayName: 'build docker image'
 
-#      - task: Docker@0
-#        displayName: 'Build an image'
-#        inputs:
-#          imageName: '$(dockerId)/$(imageName)'
-#          containerregistrytype: 'Container Registry'
-#          dockerRegistryConnection: myDockerHub
-#          dockerFile: src/main/docker/Dockerfile.native
+      - task: Docker@0
+        displayName: 'Build an image'
+        inputs:
+          imageName: '$(dockerId)/$(imageName)'
+          containerregistrytype: 'Container Registry'
+          dockerRegistryConnection: myDockerHub
+          dockerFile: src/main/docker/Dockerfile.native
+          buildContext: '.'
 
       - task: Docker@0
         displayName: 'Push an image'
@@ -40,6 +41,7 @@ jobs:
           dockerRegistryConnection: myDockerHub
           action: 'Push an image'
           imageName: '$(dockerId)/$(imageName)'
+
 
 #      - script: |
 #                       docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
