updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -34,6 +34,13 @@ jobs:
           dockerFile: src/main/docker/Dockerfile.native
           buildContext: '.'
 
+      - task: Docker@1
+        displayName: Login
+        inputs:
+          containerregistrytype: 'container Registry'
+          dockerRegistryEndpoint: myDockerHub
+          command: login
+
       - task: Docker@0
         displayName: 'Push an image'
         inputs:
