updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
 #                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
 #        displayName: 'build docker image'
 
-      - task: Docker@0
+      - task: Docker@1
         displayName: 'Build an image'
         inputs:
           imageName: '$(dockerId)/$(imageName)'
@@ -35,13 +35,13 @@ jobs:
           buildContext: '.'
 
       - task: Docker@1
-        displayName: Login
+        displayName: 'Docker Hub login'
         inputs:
           containerregistrytype: 'container Registry'
           dockerRegistryEndpoint: myDockerHub
           command: login
 
-      - task: Docker@0
+      - task: Docker@1
         displayName: 'Push an image'
         inputs:
           containerregistrytype: 'Container Registry'
