updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -21,18 +21,16 @@ jobs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
 
-#      - script: |
-#                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-#        displayName: 'build docker image'
+      - script: |
+                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+        displayName: 'build docker image'
 
-      - task: Docker@1
-        displayName: 'Build an image'
-        inputs:
-          imageName: '$(dockerId)/$(imageName)'
-          containerregistrytype: 'Container Registry'
-          dockerRegistryConnection: myDockerHub
-          dockerFile: src/main/docker/Dockerfile.native
-          buildContext: '.'
+#      - task: Docker@1
+#        displayName: 'Build an image'
+#        inputs:
+#          imageName: '$(dockerId)/$(imageName)'
+#          dockerFile: src/main/docker/Dockerfile.native
+#          buildContext: '.'
 
       - task: Docker@1
         displayName: 'Docker Hub login'
