updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -23,7 +23,7 @@ jobs:
 
       - script: |
                   docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-        displayName: 'build docker image'
+        displayName: 'Build an image'
 
 #      - task: Docker@1
 #        displayName: 'Build an image'
@@ -45,6 +45,7 @@ jobs:
           containerregistrytype: 'Container Registry'
           dockerRegistryConnection: myDockerHub
           action: 'Push an image'
+          dockerFile: src/main/docker/Dockerfile.native
           imageName: '$(dockerId)/$(imageName)'
 
 
