--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -21,9 +21,21 @@ jobs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
 
-      - script: |
-                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-        displayName: 'Build an image'
+      - task: Docker@2
+        displayName: Login to Docker Hub
+        inputs:
+          command: login
+          containerRegistry: myDockerHub
+      - task: Docker@2
+        displayName: Build and Push
+        inputs:
+          command: buildAndPush
+          dockerFile: src/main/docker/Dockerfile.native
+          repository: pzalejko/my-planner
+
+#      - script: |
+#                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+#        displayName: 'Build an image'
 
 #      - task: Docker@1
 #        displayName: 'Build an image'
@@ -32,21 +44,21 @@ jobs:
 #          dockerFile: src/main/docker/Dockerfile.native
 #          buildContext: '.'
 
-      - task: Docker@1
-        displayName: 'Docker Hub login'
-        inputs:
-          containerregistrytype: 'container Registry'
-          dockerRegistryEndpoint: myDockerHub
-          command: login
-
-      - task: Docker@1
-        displayName: 'Push an image'
-        inputs:
-          containerregistrytype: 'Container Registry'
-          dockerRegistryConnection: myDockerHub
-          action: 'Push an image'
-          dockerFile: src/main/docker/Dockerfile.native
-          imageName: '$(dockerId)/$(imageName)'
+#      - task: Docker@1
+#        displayName: 'Docker Hub login'
+#        inputs:
+#          containerregistrytype: 'container Registry'
+#          dockerRegistryEndpoint: myDockerHub
+#          command: login
+#
+#      - task: Docker@1
+#        displayName: 'Push an image'
+#        inputs:
+#          containerregistrytype: 'Container Registry'
+#          dockerRegistryConnection: myDockerHub
+#          action: 'Push an image'
+#          dockerFile: src/main/docker/Dockerfile.native
+#          imageName: '$(dockerId)/$(imageName)'
 
 
 #      - script: |
@@ -56,3 +68,18 @@ jobs:
 #        displayName: 'build docker image'
 #        env:
 #          pswd: $(dockerPassword)
+
+
+
+
+#  - task: Docker@2
+#    displayName: Login to Docker Hub
+#    inputs:
+#      command: login
+#      containerRegistry: myDockerHub
+#  - task: Docker@2
+#    displayName: Build and Push
+#    inputs:
+#      command: buildAndPush
+#      dockerFile: src/main/docker/Dockerfile.native
+#      repository: pzalejko/my-planner
