updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -32,6 +32,7 @@ jobs:
           command: buildAndPush
           dockerFile: src/main/docker/Dockerfile.native
           repository: pzalejko/my-planner
+          buildContext: '.'
 
 #      - script: |
 #                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
