updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -30,6 +30,7 @@ jobs:
         displayName: Build and Push
         inputs:
           command: buildAndPush
+          containerRegistry: myDockerHub
           dockerFile: src/main/docker/Dockerfile.native
           repository: pzalejko/my-planner
           buildContext: '.'
