--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -20,20 +20,41 @@ jobs:
         inputs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
-
-      - task: Docker@2
-        displayName: Login to Docker Hub
+      - task: Docker@1
+        displayName: 'Build an image'
         inputs:
-          command: login
-          containerRegistry: myDockerHub
-      - task: Docker@2
-        displayName: Build and Push
-        inputs:
-          command: buildAndPush
-          containerRegistry: myDockerHub
+          containerregistrytype: 'container Registry'
+          dockerRegistryEndpoint: myDockerHub
+          imageName: 'pzalejko/my-planner'
+          command: build an image
           dockerFile: src/main/docker/Dockerfile.native
-          repository: pzalejko/my-planner
           buildContext: '.'
+      - task: Docker@1
+        displayName: Login
+        inputs:
+          containerregistrytype: 'container Registry'
+          dockerRegistryEndpoint: myDockerHub
+          command: login
+      - task: Docker@1
+        displayName: 'Push an image'
+        inputs:
+          command: push an image
+          imageName: 'pzalejko/my-planner'
+
+
+#      - task: Docker@2
+#        displayName: Login to Docker Hub
+#        inputs:
+#          command: login
+#          containerRegistry: myDockerHub
+#      - task: Docker@2
+#        displayName: Build and Push
+#        inputs:
+#          command: buildAndPush
+#          containerRegistry: myDockerHub
+#          dockerFile: src/main/docker/Dockerfile.native
+#          repository: pzalejko/my-planner
+#          buildContext: '.'
 
 #      - script: |
 #                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
