--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -20,27 +20,13 @@ jobs:
         inputs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
-      - task: Docker@1
-        displayName: 'Build an image'
+      - task: Docker@2
+        displayName: Build and Push
         inputs:
-          containerregistrytype: 'container Registry'
-          dockerRegistryEndpoint: myDockerHub
-          imageName: 'pzalejko/my-planner'
-          command: build an image
-          dockerFile: src/main/docker/Dockerfile.native
+          command: buildAndPush
+          containerRegistry: myDockerHub
+          repository: pzalejko/my-planner
           buildContext: '.'
-      - task: Docker@1
-        displayName: Login
-        inputs:
-          containerregistrytype: 'container Registry'
-          dockerRegistryEndpoint: myDockerHub
-          command: login
-      - task: Docker@1
-        displayName: 'Push an image'
-        inputs:
-          command: push an image
-          imageName: 'pzalejko/my-planner'
-
 
 #      - task: Docker@2
 #        displayName: Login to Docker Hub
