updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -26,6 +26,7 @@ jobs:
           command: buildAndPush
           containerRegistry: myDockerHub
           repository: pzalejko/my-planner
+          dockerFile: src/main/docker/Dockerfile.native
           buildContext: '.'
 
 #      - task: Docker@2
