updated azure pipeline

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -20,76 +20,10 @@ jobs:
         inputs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
-      - task: Docker@2
-        displayName: Build and Push
-        inputs:
-          command: buildAndPush
-          containerRegistry: myDockerHub
-          repository: pzalejko/my-planner
-          dockerFile: src/main/docker/Dockerfile.native
-          buildContext: '.'
-
-#      - task: Docker@2
-#        displayName: Login to Docker Hub
-#        inputs:
-#          command: login
-#          containerRegistry: myDockerHub
-#      - task: Docker@2
-#        displayName: Build and Push
-#        inputs:
-#          command: buildAndPush
-#          containerRegistry: myDockerHub
-#          dockerFile: src/main/docker/Dockerfile.native
-#          repository: pzalejko/my-planner
-#          buildContext: '.'
-
-#      - script: |
-#                  docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-#        displayName: 'Build an image'
-
-#      - task: Docker@1
-#        displayName: 'Build an image'
-#        inputs:
-#          imageName: '$(dockerId)/$(imageName)'
-#          dockerFile: src/main/docker/Dockerfile.native
-#          buildContext: '.'
-
-#      - task: Docker@1
-#        displayName: 'Docker Hub login'
-#        inputs:
-#          containerregistrytype: 'container Registry'
-#          dockerRegistryEndpoint: myDockerHub
-#          command: login
-#
-#      - task: Docker@1
-#        displayName: 'Push an image'
-#        inputs:
-#          containerregistrytype: 'Container Registry'
-#          dockerRegistryConnection: myDockerHub
-#          action: 'Push an image'
-#          dockerFile: src/main/docker/Dockerfile.native
-#          imageName: '$(dockerId)/$(imageName)'
-
-
-#      - script: |
-#                       docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
-#                       docker login -u $(dockerId) -p $(pswd)
-#                       docker push $(dockerId)/$(imageName)
-#        displayName: 'build docker image'
-#        env:
-#          pswd: $(dockerPassword)
-
-
-
-
-#  - task: Docker@2
-#    displayName: Login to Docker Hub
-#    inputs:
-#      command: login
-#      containerRegistry: myDockerHub
-#  - task: Docker@2
-#    displayName: Build and Push
-#    inputs:
-#      command: buildAndPush
-#      dockerFile: src/main/docker/Dockerfile.native
-#      repository: pzalejko/my-planner
+      - script: |
+                       docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+                       docker login -u $(dockerId) -p $(dockerPassword)
+                       docker push $(dockerId)/$(imageName)
+        displayName: 'build docker image'
+        env:
+          pswd: $(dockerPassword)
