--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" ?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gmail.pzalejko</groupId>
   <artifactId>my-planner</artifactId>
@@ -7,9 +8,9 @@
   <properties>
     <surefire-plugin.version>2.22.0</surefire-plugin.version>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <kotlin.version>1.3.41</kotlin.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <quarkus.version>0.21.1</quarkus.version>
-    <kotlin.version>1.3.41</kotlin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -43,6 +44,14 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-vertx</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-reactive-streams-operators</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src/main/kotlin</sourceDirectory>
@@ -70,8 +79,8 @@
         </configuration>
       </plugin>
       <plugin>
-        <artifactId>kotlin-maven-plugin</artifactId>
         <groupId>org.jetbrains.kotlin</groupId>
+        <artifactId>kotlin-maven-plugin</artifactId>
         <version>${kotlin.version}</version>
         <executions>
           <execution>
@@ -87,18 +96,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <!-- Soon to be replaced by plugin that will pre-configure all necessary annotations -->
-          <compilerPlugins>
-            <plugin>all-open</plugin>
-          </compilerPlugins>
-
-          <pluginOptions>
-            <!-- Each annotation is placed on its own line -->
-            <option>all-open:annotation=javax.ws.rs.Path</option>
-          </pluginOptions>
-        </configuration>
-
         <dependencies>
           <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -106,6 +103,14 @@
             <version>${kotlin.version}</version>
           </dependency>
         </dependencies>
+        <configuration>
+          <compilerPlugins>
+            <plugin>all-open</plugin>
+          </compilerPlugins>
+          <pluginOptions>
+            <option>all-open:annotation=javax.ws.rs.Path</option>
+          </pluginOptions>
+        </configuration>
       </plugin>
     </plugins>
   </build>
