--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <properties>
     <surefire-plugin.version>2.22.0</surefire-plugin.version>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <kotlin.version>1.3.41</kotlin.version>
+    <kotlin.version>1.3.50</kotlin.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <quarkus.version>0.23.2</quarkus.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -116,13 +116,22 @@
             <artifactId>kotlin-maven-allopen</artifactId>
             <version>${kotlin.version}</version>
           </dependency>
+          <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-maven-noarg</artifactId>
+            <version>${kotlin.version}</version>
+          </dependency>
         </dependencies>
         <configuration>
           <compilerPlugins>
             <plugin>all-open</plugin>
+            <plugin>no-arg</plugin>
           </compilerPlugins>
           <pluginOptions>
-            <option>all-open:annotation=javax.ws.rs.Path</option>
+            <option>all-open:annotation=javax.enterprise.context.ApplicationScoped</option>
+            <option>all-open:annotation=javax.inject.Singleton</option>
+            <option>no-arg:annotation=javax.enterprise.context.ApplicationScoped</option>
+            <option>no-arg:annotation=javax.inject.Singleton</option>
           </pluginOptions>
         </configuration>
       </plugin>
