--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # Configuration file
 # key = value
-# configure the mongoDB client for a single instance on localhost
 quarkus.mongodb.connection-string = mongodb://mongodb:27017
+%local.quarkus.mongodb.connection-string = mongodb://localhost:27017
