--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 # Configuration file
 # key = value
 quarkus.mongodb.connection-string = mongodb://mongodb:27017
+quarkus.mongodb.database = my-planner
+
+# local environment
 %local.quarkus.mongodb.connection-string = mongodb://localhost:27017
