--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,11 @@
 quarkus.mongodb.connection-string = mongodb://mongodb:27017
 quarkus.mongodb.database = my-planner
 
+# JWT RBAC
+mp.jwt.verify.publickey.location = META-INF/resources/publicKey.pem
+mp.jwt.verify.issuer = https://quarkus.io/using-jwt-rbac
+quarkus.smallrye-jwt.auth-mechanism = MP-JWT
+quarkus.smallrye-jwt.enabled = true
+
 # local environment
 %local.quarkus.mongodb.connection-string = mongodb://localhost:27017
