--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,8 @@
 # key = value
 # configure the mongoDB client for a single instance on localhost
 quarkus.mongodb.connection-string = mongodb://localhost:27019
+
+mp.jwt.verify.publickey.location = publicKey.pem
+mp.jwt.verify.issuer = https://quarkus.io/using-jwt-rbac
+quarkus.smallrye-jwt.auth-mechanism = MP-JWT
+quarkus.smallrye-jwt.enabled = true
