--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - image: pzalejko/my-planner:latest
+          imagePullPolicy: Always
           name: my-planner
           resources:
             requests:
