Update azure-pipeline.yml for Azure Pipelines

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
       - script: |
-                       docker build -f src/main/docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+                       docker build -f docker/Dockerfile.native -t $(dockerId)/$(imageName) .
                        docker login -u $(dockerId) -p $(dockerPassword)
                        docker push $(dockerId)/$(imageName)
         displayName: 'build docker image'
