--- a/app/pom.xml
+++ b/app/pom.xml
@@ -3,15 +3,12 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.gmail.pzalejko</groupId>
         <artifactId>my-planner</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>my-planner-app</artifactId>
-    <packaging>jar</packaging>
-
     <properties>
         <de.flapdoodle.embed.mongo.version>2.2.0</de.flapdoodle.embed.mongo.version>
     </properties>
@@ -19,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.gmail.pzalejko</groupId>
-            <artifactId>calendar-client-google</artifactId>
+            <artifactId>calendar-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -55,6 +52,10 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-jwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-opentracing</artifactId>
         </dependency>
 
         <dependency>
