--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -9,5 +9,12 @@ mp.jwt.verify.issuer = https://quarkus.io/using-jwt-rbac
 quarkus.smallrye-jwt.auth-mechanism = MP-JWT
 quarkus.smallrye-jwt.enabled = true
 
+# jaeger
+quarkus.jaeger.service-name=my-planner
+quarkus.jaeger.sampler-type=const
+quarkus.jaeger.sampler-param=1
+quarkus.jaeger.endpoint=http://jaeger:14268/api/traces
+
 # local environment
 %local.quarkus.mongodb.connection-string = mongodb://localhost:27017
+%local.quarkus.jaeger.endpoint=http://localhost:14268/api/traces
