--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
     <packaging>pom</packaging>
 
     <properties>
-        <surefire-plugin.version>2.22.0</surefire-plugin.version>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <kotlin.version>1.3.50</kotlin.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <quarkus.version>0.28.1</quarkus.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <surefire-plugin.version>2.22.0</surefire-plugin.version>
+        <kotlin.version>1.3.60</kotlin.version>
+        <quarkus.version>1.0.0.CR1</quarkus.version>
     </properties>
 
     <modules>
@@ -39,6 +40,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
         </dependency>
     </dependencies>
 
