--- a/app/pom.xml
+++ b/app/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.gmail.pzalejko</groupId>
-            <artifactId>calendar-client</artifactId>
+            <artifactId>event-store-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
