--- a/event-store/event-store-model/pom.xml
+++ b/event-store/event-store-model/pom.xml
@@ -6,15 +6,14 @@
 
     <parent>
         <groupId>com.gmail.pzalejko</groupId>
-        <artifactId>my-planner</artifactId>
+        <artifactId>event-store</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <packaging>pom</packaging>
-    <artifactId>calendar</artifactId>
+    <packaging>jar</packaging>
+    <artifactId>event-store-model</artifactId>
 
-    <modules>
-        <module>calendar-model</module>
-        <module>calendar-client</module>
-    </modules>
+    <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+    </build>
 
 </project>
