updated to Java 11 and a new version of kotlin

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -18,6 +18,7 @@ jobs:
       - task: Maven@3
         displayName: 'Maven Build'
         inputs:
+          jdkVersionOption: '1.11'
           goals: 'package'
           options: '-Pnative -Dnative-image.docker-build=true'
       - script: |
