added a local domain name to the config

--- a/k8s/infra/jaegertracing/ingress.yaml
+++ b/k8s/infra/jaegertracing/ingress.yaml
@@ -6,7 +6,8 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-    - http:
+    - host: jaeger.localhost
+      http:
         paths:
           - path: /
             backend:
