updated mongo config for k3s

--- a/k8s/infra/jaegertracing/ingress.yaml
+++ b/k8s/infra/jaegertracing/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: nginx
+  name: jaeger
   annotations:
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
