--- a/k8s/infra/mongodb/deployment.yaml
+++ b/k8s/infra/mongodb/deployment.yaml
@@ -19,6 +19,7 @@ spec:
           name: mongodb
           ports:
             - containerPort: 27017
+              protocol: TCP
           resources:
             requests:
               memory: "64Mi"
