changes for building the app in docker

--- a/.azure/azure-pipeline.yml
+++ b/.azure/azure-pipeline.yml
@@ -15,14 +15,8 @@ jobs:
       imageName: my-planner
 
     steps:
-      - task: Maven@3
-        displayName: 'Maven Build'
-        inputs:
-          jdkVersionOption: '1.11'
-          goals: 'package'
-          options: '-Pnative -Dnative-image.docker-build=true'
       - script: |
-                       docker build -f docker/Dockerfile.native -t $(dockerId)/$(imageName) .
+                       docker build -t $(dockerId)/$(imageName) .
                        docker login -u $(dockerId) -p $(dockerPassword)
                        docker push $(dockerId)/$(imageName)
         displayName: 'build docker image'
