--- a/k8s/app/service.yaml
+++ b/k8s/app/service.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-planner
-  annotations:
-    dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP
   ports:
-    - name: "my-planner"
+    - name: "8080"
       port: 8080
+      protocol: TCP
   selector:
     app: my-planner
